# date-calculator-cli

./: .gitignore  README.md  pyproject.toml
date_calculator_cli/: cli.py
tests/: test_date_calculator_cli.py
