[tool.poetry]
name = "date-calculator-cli"
version = "1.0.0"
description = ""
authors = ["Edwin Erdmanis <edwin.erdmanis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
date-calculator = {git = "https://github.com/vorticity/date-calculator.git", tag = "v1.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"

[tool.poetry.scripts]
date-calculator-cli = "date_calculator_cli.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
